--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@
     --destructive: oklch(0.577 0.245 27.325);
     --border: oklch(0.929 0.013 255.508);
     --input: oklch(0.929 0.013 255.508);
-    --ring: oklch(0.704 0.04 256.788);
+    --ring: #fbd7ed;
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
     --chart-3: oklch(0.398 0.07 227.392);
@@ -73,7 +73,7 @@
     --sidebar-accent: oklch(0.968 0.007 247.896);
     --sidebar-accent-foreground: #fbd7ed;
     --sidebar-border: oklch(0.929 0.013 255.508);
-    --sidebar-ring: oklch(0.704 0.04 256.788);
+    --sidebar-ring: #fbd7ed;
 }
 
 .dark {
@@ -88,7 +88,7 @@
     --secondary: oklch(0.279 0.041 260.031);
     --secondary-foreground: #fdffff;
     --muted: oklch(0.279 0.041 260.031);
-    --muted-foreground: oklch(0.704 0.04 256.788);
+    --muted-foreground: #fbd7ed;
     --accent: oklch(0.279 0.041 260.031);
     --accent-foreground: #fdffff;
     --destructive: oklch(0.704 0.191 22.216);
