--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,11 +120,11 @@
   }
 
   html {
-    @apply scroll-smooth;
+    @apply overscroll-none scroll-smooth;
   }
 
   body {
-    @apply bg-background text-foreground overscroll-none;
+    @apply bg-background text-foreground;
   }
 
   button {
